--- a/InwardPolicy.Core.App/Views/Home/Home.cshtml
+++ b/InwardPolicy.Core.App/Views/Home/Home.cshtml
@@ -61,7 +61,8 @@
             </div>
         </nav>
         <div class="wrapper">
-            <div class="page-header section-dark" style="background-image: url('http://demos.creative-tim.com/paper-kit-2/assets/img/antoine-barres.jpg')">
+            @*<div class="page-header section-dark" style="background-image: url('http://demos.creative-tim.com/paper-kit-2/assets/img/antoine-barres.jpg')">*@
+            <div class="page-header section-dark" style="background-image: url('https://images.pexels.com/photos/11688878/pexels-photo-11688878.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1')">
                 <div class="filter"></div>
                 <div class="content-center">
                     <div class="container">
