--- a/InwardPolicy.Core.App/Areas/Admin/Views/ErrorCodeMaster/ErrorCodeMaster.cshtml
+++ b/InwardPolicy.Core.App/Areas/Admin/Views/ErrorCodeMaster/ErrorCodeMaster.cshtml
@@ -1,4 +1,4 @@
-﻿@model InwardPolicy.Admin.Models.CodesMasterModel
+﻿@model InwardPolicy.Models.ErrorCodeMasterModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -7,7 +7,7 @@
     .modal-header {
         background-color: #87E0E0;
     }
-    
+
     #modalHeading {
         font-size: 50px;
     }
@@ -15,7 +15,7 @@
 
 <div class="container bg-light p-4 border rounded shadow mt-2">
     @*Row1*@
-   
+
     <div class=" text-end justify-content-center mb-3">
         <button id="btnAddNew" type="button" class="btn btn-primary">
             <i class="bi bi-plus-circle"></i> Add New
@@ -24,7 +24,7 @@
     <form id="frmUserMaster" method="post">
         <div class="row justify-content-center mb-3">
             @*<div class="container bg-light p-4 border rounded shadow mt-2">*@
-            <table class="table table-hover" id="tblCodesMaster">
+            <table class="table table-hover" id="tblErrorCodeMaster">
                 <thead>
                     <tr class="table-info">
                         <th scope="col">Type</th>
@@ -47,11 +47,11 @@
     <div class="modal-dialog modal-lg">
         <div class="modal-content rounded">
             <div class="modal-header text-lg-center text-white">
-                <h5 id="modalHeading" >Codes Master</h5>
+                <h5 id="modalHeading">Codes Master</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body" id="modalCodesMasterBody">
-                <!-- ViewComponent content will be loaded here dynamically -->
+                 ViewComponent content will be loaded here dynamically 
             </div>
         </div>
     </div>
@@ -62,31 +62,27 @@
     <script>
 
         $(document).ready(function () {
-            
-            // Get TempData values from Razor
-            var message = '@TempData["Message"]';
-            var title = '@TempData["Title"]';
-            var icon = '@TempData["Icon"]';
-
-            // Check if a message exists
-            if (message) {
+            const swalTitle = '@TempData["Title"]';
+            const swalMessage = '@TempData["Message"]';
+            console.log(swalMessage);
+            const swalIcon = '@TempData["Icon"]';
+            if (swalTitle && swalMessage && swalIcon) {
                 Swal.fire({
-                    title: title,
-                    text: message,
-                    icon: icon
+                    title: swalTitle,
+                    text: swalMessage,
+                    icon: swalIcon
                 });
             }
-        
 
 
             //datatable
-            $('#tblCodesMaster').DataTable({
+            $('#tblErrorCodeMaster').DataTable({
                 //dom: 'Bfrtip', // Define layout for plugins
                 buttons: [
                     'copy', 'excel', 'pdf', 'csv', 'print' // Add more buttons if needed
                 ],
-                ajax: {
-                    url: '@Url.Action("CodesMasterBind", "CodesMaster", new { area = "Admin" })',
+                ajax:{
+                    url: '@Url.Action("ErrorCodeMasterBind", "ErrorCodeMaster", new { area = "Admin" })',
                     type: "POST"
                 },
                 processing: true,
@@ -99,16 +95,17 @@
                 pageLength: 10, // Default number of rows per page
                 lengthMenu: [5, 10, 20, 50, 100], // Options for rows per page
                 columns: [
-                    { data: "CM_TYPE", name: "USER_ID", autoWidth: true },
-                    { data: "CM_CODE", name: "USER_NAME", autoWidth: true },
-                    { data: "CM_ACTIVE_YN", name: "USER_ACTIVE_YN", autoWidth: true },
+                    { data: "ERR_TYPE", name: "USER_ID", autoWidth: true },
+                    { data: "ERR_CODE", name: "USER_NAME", autoWidth: true },
+                    { data: "ERR_DESC", name: "USER_ACTIVE_YN", autoWidth: true },
                     {
 
                         render: function (data, type, row) {
                             if (row.CM_ACTIVE_YN === 'Y') {
-                           } else {
-                                return "<a onclick=\"UpdateCodesMaster('" + row.CM_CODE + "', '" + row.CM_TYPE + "');\"><i class='bi bi-pencil'></i></a>" +
-                                    "<a onclick=\"DeleteCodesMaster('" + row.CM_CODE + "', '" + row.CM_TYPE + "');\"><i class='bi bi-trash'></i></a>";
+                                return "<a onclick=\"UpdateErrorCodeMaster('" + row.ERR_CODE + "');\"><i class='bi bi-pencil'></i></a>";
+                            } else {
+                                return "<a onclick=\"UpdateErrorCodeMaster('" + row.ERR_CODE + "');\"><i class='bi bi-pencil'></i></a>" +
+                                    "<a onclick=\"DeleteErrorCodeMaster('" + row.ERR_CODE + "');\"><i class='bi bi-trash'></i></a>";
                             }
                         }
 
@@ -120,14 +117,14 @@
             });
         });
         //delete
-        function DeleteCodesMaster(CM_CODE,CM_TYPE) {
+        function DeleteErrorCodeMaster(code) {
             //console.log("Deleting user with ID:", UserId);
-            console.log(CM_CODE);
-            console.log(CM_TYPE );
+            console.log(code);
+            //console.log(CM_TYPE );
             $.ajax({
                 type: "DELETE",
-                url: '@Url.Action("DeleteCodesMaster", "CodesMaster")',
-                data: { code : CM_CODE, type: CM_TYPE },
+                url: '@Url.Action("DeleteErrorCodeMaster", "ErrorCodeMaster")',
+                data: { code: code  },
                 success: function (response) {
                     console.log("AJAX request was successful. Response:", response);
                     if (response===true) {
@@ -144,7 +141,7 @@
                             icon: "success"
                         });
                     }
-                    $('#tblCodesMaster').DataTable().ajax.reload();
+                    $('#tblErrorCodeMaster').DataTable().ajax.reload();
                 },
                 error: function (xhr, status, error) {
                     console.error("Error occurred during deletion:", error);
@@ -155,23 +152,24 @@
         }
 
         //Update
-        function UpdateCodesMaster(CM_CODE, CM_TYPE) {
+        function UpdateErrorCodeMaster(code) {
             //console.log("Deleting user with ID:", UserId);
-            console.log(CM_CODE);
-            console.log(CM_TYPE);
+            console.log(code);
+            //console.log(CM_TYPE);
             $.ajax({
             type: "GET",
-            url: '@Url.Action("GetCodesMasterDetails", "CodesMaster")',
-            data: { code: CM_CODE, type: CM_TYPE },
-                success: function (CodesMasterViewComponent) {
-                    $("#modalCodesMasterBody").html(CodesMasterViewComponent);
+            url: '@Url.Action("GetErrorCodeMasterDetails", "ErrorCodeMaster")',
+                data: { code: code },
+                contentType: 'application/json',
+                success: function (ErrorCodeMasterViewComponent) {
+                    $("#modalCodesMasterBody").html(ErrorCodeMasterViewComponent);
                     $("#modalCodesMaster").modal("show");
 
                 },
-            error: function (xhr, status, error) {
-                console.error("Error occurred during deletion:", error);
-                console.log("Server response:", xhr.responseText);
-            }
+                error: function (xhr, status, error) {
+                    console.error("Error occurred during update:", error);
+                    console.log("Server response:", xhr.responseText);
+                }
         });
         }
 
@@ -180,12 +178,12 @@
                 $('#btnAddNew').click(function () {
                     var CodeMasterViewModel = null;
                     $.ajax({
-                        url: "@Url.Action("ShowModal", "CodesMaster",new { area = "Admin" })",
+                        url: "@Url.Action("ShowModal", "ErrorCodeMaster",new { area = "Admin" })",
                         type: 'GET',
                         contentType: 'application/json',
                         data: JSON.stringify(CodeMasterViewModel),
-                        success: function (CodesMasterViewComponent) {
-                            $("#modalCodesMasterBody").html(CodesMasterViewComponent);
+                        success: function (ErrorCodeMasterViewComponent) {
+                            $("#modalCodesMasterBody").html(ErrorCodeMasterViewComponent);
                             $("#modalCodesMaster").modal("show");
                             //$("#txtcode").prop("readonly", false);
                             //$("#txttype").prop("readonly", false);
@@ -198,33 +196,27 @@
         })
 
         //duplicate check
-        function CheckCodesMaster() {
-            var code = $("#txtCmCode").val();
-            var type = $("#txtCmType").val();
-            if (code && type) {
-
+        function CheckErrorCodeMaster() {
+            var code = $("#txtErrCode").val();            
+            if (code) {
+                
                 console.log(code);
-                console.log(type);
+                //console.log(type);
                 $.ajax({
                     type: "GET",
-                    url: '@Url.Action("CheckCodesMaster", "CodesMaster")',
-                    data: { code: code, type: type },
+                    url: '@Url.Action("CheckErrorCodeMaster", "ErrorCodeMaster")',
+                    data: { code: code},
                     success: function (response) {
                         console.log(response)
-                        if (response.status === true) {
-                            console.log("clear");
+                        if (response === true) {
+                            $("#txtErrCode").val("");
                             Swal.fire({
-                                title: response.title || "Error",
-                                text: response.message || "User already exixt.",
-                                icon: response.icon || "error"
+                                title: "Error",
+                                text: "Error code already exists!",
+                                icon: "error"
                             });
-                            //$("#txtUserId").val('');
-                            $("#txtCmCode").val("");
-                            $("#txtCmType").val("");
+                                                  
                         }
-                        
-
-
                     },
                     error: function (xhr, status, error) {
                         console.error("Error occurred during deletion:", error);
@@ -237,3 +229,4 @@
 
     </script>
 }
+
