--- a/InwardPolicy.Core.App/Views/Login/Login.cshtml
+++ b/InwardPolicy.Core.App/Views/Login/Login.cshtml
@@ -18,12 +18,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
     @*<link href="~/css/Login.scss" rel="stylesheet">*@
     <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+    <link href="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.css" rel="stylesheet">
 
     <link href="~/css/Login.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <style>
+
     </style>
     @*<canvas></canvas>*@
     <!--<div class="lines">
@@ -74,14 +76,14 @@
         <div class="line"></div>
     </div>
     @*<section class="container">
-        <h1>
-            <span class="title">This is</span>
-            <span class="title">a long</span>
-            <span class="title">long title</span>
-        </h1>
+            <h1>
+                <span class="title">This is</span>
+                <span class="title">a long</span>
+                <span class="title">long title</span>
+            </h1>
 
 
-    </section>*@
+        </section>*@
     @*<center><h1 id="Heading" class=" shadow  text-center mt-5 text-white">INWARD POLICY ENTRY SYSTEM</h1></center>*@
     <form id="form1" method="post" asp-action="CheckLogin">
         <div class="container d-flex justify-content-center">
@@ -114,9 +116,26 @@
     @*<a href="https://codepen.io/davinci/" target="_blank">check my other pens</a>*@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.7.0/dist/sweetalert2.min.js"></script>
+
     @*<script src="~/js/Login.js"></script>*@
 
     <script>
+        $(document).ready(function () {
+        // Get TempData values from Razor
+            var message = '@TempData["Message"]';
+            var title = '@TempData["Title"]';
+            var icon = '@TempData["Icon"]';
+
+            // Check if a message exists
+            if (message) {
+                Swal.fire({
+                    title: title,
+                    text: message,
+                    icon: icon
+                });
+            }
+        });
     </script>
 </body>
 </html>
